apps/balhauapi/balhauapi-db.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: balhauapi
  namespace: balhau-dev
  labels:
    version: 0.0.1
    app: balhauapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: balhauapi
  template:
    metadata:
      labels:
        app: balhauapi
    spec:
      containers:
      - name: balhauapi
        image: 10.108.252.69:5000/balhau/balhauapi:arm32v7-0.0.3
        resources:
          requests:
            memory: "128Mi"
            cpu: "800m"
            
        ports:
        - containerPort: 8000
          name: registry
          protocol: TCP
